# KiwiNotes

./: Block.qml  CMakeLists.txt  CheckBoxItem.qml  Document.qml  Main.qml  README.md  functions.js  main.cpp  resources.qrc
android/: AndroidManifest.xml
